--- a/landing socially/index.html
+++ b/landing socially/index.html
@@ -93,3 +93,225 @@
   text-align: center;
 }
 
+.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;
+.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;.contact-form {
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 30px 30px 20px;
+}
+
+.contact-form form {
+  width: 100%;
+}
+
+.contact-form .row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contact-form .input50,
+.contact-form .input100 {
+  width: 100%;
+  margin: 0;
