--- a/landing socially/index.html
+++ b/landing socially/index.html
@@ -327,3 +327,60 @@
 ////////////////////////////////////////////////////////
 ////////
 ///////////////
+toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});toggleButton.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});
+
+navigation.addEventListener("click", () => {
+  toggleButton.classList.toggle("active");
+  navigation.classList.toggle("active");
+});v
